LPS-120925 Allow for multiple roles in future
