# modules/dxp/apps/saml/saml-admin-rest-impl/src/main/java/com/liferay/saml/admin/rest/internal/resource/v1_0/ProviderConfigurationResourceImpl.java
@@ -38,12 +38,14 @@ public class ProviderConfigurationResourceImpl
 		ProviderConfiguration providerConfiguration =
 			new ProviderConfiguration();
 
+		providerConfiguration.setEnabled(true);
+
 		IdpProviderConfiguration idpProviderConfiguration =
 			new IdpProviderConfiguration();
 
 		idpProviderConfiguration.setEntityId("test");
 
-		providerConfiguration.setRole(idpProviderConfiguration);
+		providerConfiguration.setIdp(idpProviderConfiguration);
 
 		return providerConfiguration;
 	}
